2002-11-10  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (GetArgs): Expand abbreviations in source doc 
	comments.	

2002-11-09  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mktmpl.in (OutputSignalTemplates): Don't replace template
	param names with meaningless argn names generated by gtkdoc-scangobj.

	* gtkdoc-mkdb.in (GetSignals): Use argument names from source doc
	comments, if available. 
	(GetArgs): Use source doc comments instead of blurb, if available.
	(ScanSourceFile): Also accept object::signal and object:property
	symbols.
	(MergeSourceDocumentation): For signals only, prefer source doc
	param names over template param names.

Fri Nov  8 15:10:57 2002  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in (GetPrerequisites): Add missing <para>
	here too.

Mon Nov  4 17:17:40 2002  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in (MergeSourceDocumentation): Warn
	when overriding docs in template file by inline comments.

	* gtkdoc-mkdb.in (GetInterfaces): Add missing <para> in
	"Implemented interfaces" output.

2002-10-29  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scangobj.in: in get_type_name() set is_pointer to TRUE for
	subtypes of G_TYPE_BOXED and G_TYPE_POINTER. This means we get things
	like "GtkTreeIter *iter" rather than "GtkTreeIter iter" which was
	incorrect. Also return 'GParamSpec*' for G_TYPE_PARAM.
	in lookup_signal_arg_names() changed GtkNotebook::switch-page
	page argument to guint. And fixed a few other entries.
	Also fixed argument numbering, so we don't get 2 "widget" arguments.
	
	* gtkdoc-scanobj.in: add ';' after unlink command to avoid warning.

2002-10-20  Matthias Clasen  <maclas@gmx.de>

	* examples/Makefile.am (SCANOBJ_FILES): Add $(DOC_MODULE).prerequisites.

	* gtkdoc-mkdb.in: Read $MODULE.prerequisites and put list of 
	prerequisites below the object hierarchy for interfaces.

	* gtkdoc-scangobj.in: Write information about interface
	prerequisites to $MODULE.prerequisites.
