@@ -1,3 +1,10 @@
+2002-11-10  James Henstridge  <james@daa.com.au>
+
+	* gtk-doc.xsl: change style for documentation.
+
+	* gtkdoc-mkhtml.in (declaration): copy PNG files to the html
+	directory.
+
 2002-11-10  Matthias Clasen  <maclas@gmx.de>
 
 	* gtkdoc-mkdb.in (GetArgs): Expand abbreviations in source doc 
